# pivotstream

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  cliff.toml  main.py  pyproject.toml  requirements.txt
.githooks/: commit-msg
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: changelog.yml  release.yml
books/: austen-pride-and-prejudice-illustrations.epub  pg2638-images.epub
docs/internal/: conduct-enforcement.md
scripts/: generate_changelog.sh  get_bump_type.sh  test_bump_type.sh
static/: app.js  index.html  styles.css
tests/: test_imports.py  test_parsing.py
