[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anchorread"
version = "0.1.0"
description = "RSVP reader with fixed ORP alignment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.30.6",
  "python-multipart==0.0.21",
]
